@@ -1371,8 +1371,9 @@ class WCS_Cart_Renewal {
 	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v2.4.3
 	 */
 	public function setup_discounts( $order ) {
-		$order_discount = $order->get_total_discount( ! $order->get_prices_include_tax() );
-		$coupon_items   = $order->get_items( 'coupon' );
+		$prices_include_tax = $order->get_prices_include_tax();
+		$order_discount     = $order->get_total_discount( ! $prices_include_tax );
+		$coupon_items       = $order->get_items( 'coupon' );
 
 		if ( empty( $order_discount ) && empty( $coupon_items ) ) {
 			return;
@@ -1380,6 +1381,10 @@ class WCS_Cart_Renewal {
 
 		$total_coupon_discount = floatval( array_sum( wc_list_pluck( $coupon_items, 'get_discount' ) ) );
 		$coupons               = array();
+
+		if ( $prices_include_tax ) {
+			$total_coupon_discount += floatval( array_sum( wc_list_pluck( $coupon_items, 'get_discount_tax' ) ) );
+		}
 
 		// If the order total discount is different from the discount applied from coupons we have a manually applied discount.
 		$order_has_manual_discount = $order_discount !== $total_coupon_discount;
