@@ -6,6 +6,7 @@
 * Fix - Blocks the reactivation of a subscription when the end date is in the past.
 * Fix - Ensure a subscription's modified date is updated when its related order cache is updated on non-HPOS sites.
 * Fix - Ensure trial period form data is set before use to prevent fatal errors when the data is missing.
+* Fix - Resolved an error with coupon discount calculations for manual or early renewal orders on stores with tax-inclusive pricing.
 
 = 7.4.3 - 2024-09-05 =
 * Fix - Prevent errors during checkout when a customer is switching their subscription product and does not require payment.
